Added a table with all API/Consumer ids #137

--- a/konga/views/layout.ejs
+++ b/konga/views/layout.ejs
@@ -132,6 +132,7 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.js?r=0.8.8"></script>
     <script src="bower_components/angular-base64/angular-base64.js?r=0.8.8"></script>
     <script src="bower_components/ng-tags-input/ng-tags-input.js?r=0.8.8"></script>
+    <script src="bower_components/ng-idle/angular-idle.js?r=0.8.8"></script>
     <script src="js/app/apis/00_apis.js?r=0.8.8"></script>
     <script src="js/app/apis/api-model.js?r=0.8.8"></script>
     <script src="js/app/apis/apis-service.js?r=0.8.8"></script>
