Handle add group button in add mode #158
(cherry picked from commit 37a7b0b)

--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -164,7 +164,7 @@
                           <input type="radio" value="or" name="condition{{pIndex}}{{$index}}0" checked>or |
                           <input type="radio" value="and" name="condition{{pIndex}}{{$index}}0">and |
                           <input type="radio" value="not" name="condition{{pIndex}}{{$index}}0">not
-                          <button type="button" class="btn btn-xs btn-success" data-add="rule"
+                          <button type="button" class="btn btn-xs btn-success" data-add="rule" name="btnAdd{{pIndex}}{{$index}}0"
                                   data-ng-click="addGroup(pIndex +''+ $index,1)"><i class="mdi mdi-plus"></i>
                             Add Group
                           </button>
