--- a/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
+++ b/konga/assets/js/app/apis/views/manage-uma-rs-plugin.html
@@ -301,7 +301,7 @@
           </div>
           <div class="row">
             <hr/>
-            <button type="submit" class="btn btn-primary" ng-click="managePlugin(PluginForm.$valid)">
+            <button type="submit" class="btn btn-primary" ng-click="managePlugin(PluginForm)">
               <i class="mdi mdi-check"></i> {{isKongUMARSPluginAdded ? "Update" : "Add" }}
             </button>
           </div>
