--- a/konga/assets/js/app/apis/views/api-plugins.html
+++ b/konga/assets/js/app/apis/views/api-plugins.html
@@ -27,18 +27,13 @@
     <th width="1"></th>
     <th width="1"></th>
     <th>Name</th>
+    <th>Consumer</th>
     <th>Created</th>
     <th width="1"></th>
   </tr>
   <tr
     dir-paginate="item in plugins.data | orderBy:'created_at':true | itemsPerPage: 25 | filter : search">
     <td>
-      <!--<input-->
-      <!--uib-tooltip="{{item.enabled ? 'Enabled' : 'Disabled'}}"-->
-      <!--ng-change="updatePlugin(item)"-->
-      <!--ng-model="item.enabled"-->
-      <!--type="checkbox"/>-->
-
       <input
         bs-switch
         switch-on-color="primary"
@@ -58,6 +53,10 @@
         {{item.name}}
       </a>
     </th>
+    <td>
+      <a data-ng-if="item.consumer_id" data-ui-sref="consumers.edit({id:item.consumer_id})">{{item.consumer_id}}</a>
+      <span data-ng-if="!item.consumer_id">All consumers</span>
+    </td>
     <td>{{item.created_at | date : format : timezone}}</td>
     <td>
       <button class="btn btn-link btn-danger" ng-click="deletePlugin(item)">
