--- a/konga/assets/js/app/apis/views/apis.html
+++ b/konga/assets/js/app/apis/views/apis.html
@@ -1,24 +1,3 @@
-<!--<div class="row">-->
-<!--<div class="col-md-12 actions">-->
-<!--<a  class="btn btn-primary" ng-click="openAddApiModal()">-->
-<!--<i class="mdi mdi-plus"></i>-->
-<!--Add New Api-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--<div class="col-md-12">-->
-<!--<div class="bg-light-grey padding clearfix">-->
-<!--<div class="input-group col-sm-4 pull-left">-->
-<!--<div class="input-group-addon">-->
-<!--<i class="mdi mdi-magnify"></i>-->
-<!--</div>-->
-<!--<input type="text" data-ng-model="search" class="form-control" placeholder="search apis...">-->
-<!--</div>-->
-<!--<dir-pagination-controls class="pull-right"></dir-pagination-controls>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
 <div class="row actions">
   <div class="col-md-12">
     <a class="btn btn-primary pull-left"
@@ -85,12 +64,14 @@
           <td>{{ api.upstream_url || "-" }}</td>
           <td>{{api.created_at | date : format : timezone}}</td>
           <td>
-            <a ui-sref="apis.uma-plugin({ api_id: api.id })" class="btn btn-primary btn-link"><i class="mdi mdi-lock"></i>
+            <a ui-sref="apis.uma-plugin({ api_id: api.id })" class="btn btn-primary btn-link"><i
+              class="mdi mdi-lock"></i>
               Security
             </a>
           </td>
-          <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
-            <a ui-sref="apis.edit({ api_id: api.id })" class="btn btn-info btn-link" title="Manage"><i class="mdi mdi-pencil"></i>
+          <td>
+            <a ui-sref="apis.edit({ api_id: api.id })" class="btn btn-info btn-link" title="Manage"><i
+              class="mdi mdi-pencil"></i>
             </a>
             <button type="button" ng-click="deleteItem($index,api)" class="btn btn-danger btn-link" title="Delete">
               <i class="mdi mdi-delete"></i>
@@ -102,4 +83,3 @@
     <dir-pagination-controls class="pull-right"></dir-pagination-controls>
   </div>
 </div>
-
