--- a/konga/assets/js/app/routes/views/routes.html
+++ b/konga/assets/js/app/routes/views/routes.html
@@ -80,9 +80,9 @@
           <td>{{ route.paths.join(", ") || "-" }}</td>
           <td>{{route.created_at*1000 | date : format : timezone}}</td>
           <td>
-            <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-primary btn-link"><i
+            <a ui-sref="routes.oauth-plugin({route_id: route.id })" class="btn btn-primary btn-link"><i
               class="mdi mdi-lock"></i>
-              Security
+              OAuth
             </a>
           </td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
