Added plugin for kong API object with OP client form GG side with UI changes #218

--- a/konga/assets/js/app/apis/views/apis.html
+++ b/konga/assets/js/app/apis/views/apis.html
@@ -64,9 +64,9 @@
           <td>{{ api.upstream_url || "-" }}</td>
           <td>{{api.created_at | date : format : timezone}}</td>
           <td>
-            <a ui-sref="apis.uma-plugin({api_id: api.id })" class="btn btn-primary btn-link"><i
+            <a ui-sref="apis.oauth-plugin({api_id: api.id })" class="btn btn-primary btn-link"><i
               class="mdi mdi-lock"></i>
-              Security
+              OAuth
             </a>
           </td>
           <td>
