--- a/konga/assets/js/app/services/views/services.html
+++ b/konga/assets/js/app/services/views/services.html
@@ -59,6 +59,10 @@
               class="mdi mdi-lock"></i>
               OAuth
             </a>
+            <a ui-sref="services.uma-plugin({service_id: service.id })" class="btn btn-primary btn-link"><i
+              class="mdi mdi-lock"></i>
+              UMA
+            </a>
           </td>
           <td>
             <a ui-sref="services.edit({ service_id: service.id })" class="btn btn-info btn-link">
