--- a/konga/assets/js/app/apis/views/apis.html
+++ b/konga/assets/js/app/apis/views/apis.html
@@ -68,6 +68,10 @@
               class="mdi mdi-lock"></i>
               OAuth
             </a>
+            <a ui-sref="apis.uma-plugin({api_id: api.id })" class="btn btn-primary btn-link"><i
+              class="mdi mdi-lock"></i>
+              UMA
+            </a>
           </td>
           <td>
             <a ui-sref="apis.edit({ api_id: api.id })" class="btn btn-info btn-link" title="Manage"><i
