--- a/konga/assets/js/app/routes/views/edit-route.html
+++ b/konga/assets/js/app/routes/views/edit-route.html
@@ -18,5 +18,6 @@
   <div class="col-md-9">
     <div data-ui-view="details" ng-show="activeSection == 0"></div>
     <div data-ui-view="plugins" ng-show="activeSection == 1"></div>
+    <div data-ui-view="consumers" ng-if="activeSection == 2"></div>
   </div>
 </div>
