--- a/konga/assets/js/app/routes/views/routes.html
+++ b/konga/assets/js/app/routes/views/routes.html
@@ -1,17 +1,15 @@
 <div class="row actions">
   <div class="col-md-12">
-    <a class="btn btn-link pull-left btn-sm margin-top"
+    <a class="btn btn-primary pull-left"
        data-ui-sref="services"
-       ng-if="user.hasPermission($state.name.split('.')[0],'create')"
-    >
-      <small class='text-info'>You can only create routes from a service page</small>
+       ng-if="user.hasPermission($state.name.split('.')[0],'create')">
+      You can only create routes from a service page
     </a>
     <list-search
       class="pull-right"
       data-filters="filters"
       data-options="itemsPerPageOptions"
-      data-items="itemsPerPage"
-    ></list-search>
+      data-items="itemsPerPage"></list-search>
   </div>
 </div>
 <konga-loader ng-if="loading && !items.data.length"></konga-loader>
@@ -20,35 +18,25 @@
     <div class="table-responsive">
       <table class="table table-hover table-striped">
         <tr>
-          <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'edit')"></th>
-          <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'edit')"></th>
           <th width="1"></th>
-          <th width="{{item.width}}" class="text-nowrap"
-              data-ng-repeat="item in titleItems | filter:titleFilter"
-          >
+          <th width="1"></th>
+          <th width="1"></th>
+          <th width="{{item.width}}" class="text-nowrap" data-ng-repeat="item in titleItems | filter:titleFilter">
             <a
               data-ng-show="item.column"
               class="clickable"
               data-ng-click="changeSort(item)"
-              data-ng-bind-html="item.title.toUpperCase()"
-            ></a>
-            <span
-              data-ng-show="!item.column"
-              data-ng-bind-html="item.title.toUpperCase()"
-            ></span>
-
-            <i class="mdi"
-               data-ng-show="sort.column == item.column"
-               data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"
-            ></i>
+              data-ng-bind-html="item.title.toUpperCase()"></a>
+            <span data-ng-show="!item.column" data-ng-bind-html="item.title.toUpperCase()"></span>
+            <i class="mdi" data-ng-show="sort.column == item.column"
+               data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"></i>
           </th>
-          <th></th>
+          <th>Gluu Security</th>
           <th></th>
         </tr>
         <tr
           dir-paginate="route in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage as filteredItems">
-          <td ng-if="user.hasPermission($state.name.split('.')[0],'edit')">
-
+          <td>
             <i
               uib-tooltip="Strip Path"
               ng-click="toggleStripPath(route)"
@@ -56,7 +44,7 @@
               class="mdi mdi-link-off clickable">
             </i>
           </td>
-          <td ng-if="user.hasPermission($state.name.split('.')[0],'edit')">
+          <td>
             <i
               uib-tooltip="Preserve Host"
               ng-click="route.preserve_host=!route.preserve_host;updateRoute(route.id,{preserve_host : route.preserve_host})"
@@ -70,20 +58,21 @@
           <td>
             <strong>
               <a class="clickable"
-                 data-ui-sref="routes.edit({route_id:route.id})">{{ route.hosts.join(", ") || "-" }}</a>
+                 data-ui-sref="routes.edit({route_id:route.id})">{{ route.id}}</a>
             </strong>
+          </td>
+          <td>
+            {{ route.hosts.join(", ") || "-" }}
           </td>
           <td><a data-ui-sref="services.edit({service_id:route.service.id})">{{route.service.name ||
             route.service.id}}</a></td>
           <td>{{ route.paths.join(", ") || "-" }}</td>
           <td>{{route.created_at*1000 | date : format : timezone}}</td>
           <td>
-            <a ui-sref="routes.oauth-plugin({route_id: route.id })" class="btn btn-primary btn-link"><i
-              class="mdi mdi-lock"></i>
+            <a ui-sref="routes.oauth-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
               OAuth
             </a>
-            <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-primary btn-link"><i
-              class="mdi mdi-lock"></i>
+            <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
               UMA
             </a>
           </td>
