--- a/konga/assets/js/app/routes/views/route-plugins.html
+++ b/konga/assets/js/app/routes/views/route-plugins.html
@@ -46,10 +46,13 @@
       <raw-view data-item="item"></raw-view>
     </td>
     <th>
-      <a ui-sref="apis.uma-plugin({api_id: api_id})" data-ng-if="item.name == 'gluu-oauth2-rs'">
+      <a ui-sref="routes.uma-plugin({route_id: route.id})" data-ng-if="item.name == 'gluu-pep'">
         {{item.name}}
       </a>
-      <a href data-ng-if="item.name != 'gluu-oauth2-rs'" ng-click="onEditPlugin(item)">
+      <a ui-sref="routes.oauth-plugin({route_id: route.id})" data-ng-if="item.name == 'gluu-client-auth'">
+        {{item.name}}
+      </a>
+      <a href data-ng-if="item.name != 'gluu-pep' && item.name != 'gluu-client-auth'" ng-click="onEditPlugin(item)">
         {{item.name}}
       </a>
     </th>
