Small fixes: Checkbox size issue and connection issue

--- a/konga/assets/js/app/routes/views/routes.html
+++ b/konga/assets/js/app/routes/views/routes.html
@@ -67,8 +67,8 @@
             <a ui-sref="routes.oauth-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
               OAuth
             </a>
-            <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
-              UMA
+            <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-sm btn-primary" style="margin-top: 3px;">
+              &nbsp;&nbsp;UMA&nbsp;&nbsp;
             </a>
           </td>
           <td>
