--- a/konga/assets/js/app/routes/views/route-modal.html
+++ b/konga/assets/js/app/routes/views/route-modal.html
@@ -10,7 +10,132 @@
 
 <div class="modal-body" id="modal-body">
   <form class="form-horizontal">
-    <div data-ng-include="partial"></div>
+    <div class="col col-sm-offset-3">
+      <div class="alert alert-info">
+        <small>* For hosts, paths, methods and protocols, press enter to apply every value you type</small>
+      </div>
+    </div>
+    <div class="form-group" ng-class="{'has-error' : errors.hosts}">
+      <label class="col-sm-3 control-label">Hosts <br><em>
+        <small class="help-block">semi-optional</small>
+      </em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.hosts">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <!--<input ng-model="route.hosts" class="form-control">-->
+        <div class="text-danger" ng-if="errors.hosts" data-ng-bind="errors.hosts"></div>
+        <p class="help-block">
+          A list of domain names that match this Route. For example: example.com. At least one of hosts, paths, or
+          methods
+          must be set.
+        </p>
+      </div>
+    </div>
+    <div class="form-group" ng-class="{'has-error' : errors.paths}">
+      <label class="col-sm-3 control-label">Paths <br><em>
+        <small class="help-block">semi-optional</small>
+      </em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.paths">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">
+          A list of paths that match this Route. For example: /my-path. At least one of <code>hosts</code>,
+          <code>paths</code>, or <code>methods</code> must be set.
+        </p>
+      </div>
+    </div>
+    <div class="form-group" ng-class="{'has-error' : errors.methods}">
+      <label class="col-sm-3 control-label">Methods <br><em>
+        <small class="help-block">semi-optional</small>
+      </em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.methods">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">
+          A list of HTTP methods that match this Route. At least one of <code>hosts</code>, <code>paths</code>, or
+          <code>methods</code>
+          must be set.
+        </p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-3 control-label">Strip Path
+        <br><em>
+          <small class="help-block">optional</small>
+        </em></label>
+      <div class="col-sm-9 check-toggle-size">
+        <input bs-switch ng-model="route.strip_path"
+               switch-size="small"
+               type="checkbox"
+               switch-on-text="YES"
+               switch-off-text="NO">
+        <p class="help-block">
+          When matching a Route via one of the <code>paths</code>, strip the matching prefix from the upstream request
+          URL.
+        </p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-3 control-label">Preserve Host
+        <br><em>
+          <small class="help-block">optional</small>
+        </em></label>
+      <div class="col-sm-9 check-toggle-size">
+        <input bs-switch ng-model="route.preserve_host"
+               switch-size="small"
+               type="checkbox"
+               switch-on-text="YES"
+               switch-off-text="NO">
+        <p class="help-block">
+          When matching a Route via one of the <code>hosts</code> domain names,
+          use the request <code>Host</code> header in the upstream request headers.
+          By default set to <code>false</code>, and the upstream Host header will be that of the Service's
+          <code>host</code>
+        </p>
+      </div>
+    </div>
+    <div class="form-group" ng-class="{'has-error' : errors.uris}">
+      <label class="col-sm-3 control-label">Protocols <br><em>
+        <small class="help-block">semi-optional</small>
+      </em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.protocols">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">
+          A list of the protocols this Route should allow. By default it is <code>["http", "https"]</code>,
+          which means that the Route accepts both. When set to <code>["https"]</code>,
+          HTTP requests are answered with a request to upgrade to HTTPS.
+        </p>
+      </div>
+    </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-7">
         <button type="submit" class="btn btn-primary btn-block" ng-click="submit()">
@@ -19,6 +144,5 @@
         </button>
       </div>
     </div>
-
   </form>
 </div>
