--- a/konga/assets/js/app/routes/views/route-plugins.html
+++ b/konga/assets/js/app/routes/views/route-plugins.html
@@ -33,7 +33,7 @@
   </tr>
   <tr
     dir-paginate="item in plugins.data | orderBy:'created_at':true | itemsPerPage: 25 | filter : search">
-    <td>
+    <td class="check-toggle-size">
       <input
         bs-switch
         switch-on-color="primary"
