Configure plugins globally and solved navigation, design issue #236

--- a/konga/assets/js/app/apis/views/apis.html
+++ b/konga/assets/js/app/apis/views/apis.html
@@ -68,7 +68,7 @@
               OAuth
             </a>
             <a ui-sref="apis.uma-plugin({api_id: api.id })" class="btn btn-sm btn-primary">
-              UMA
+              PEP
             </a>
           </td>
           <td>
