--- a/konga/assets/js/app/routes/views/routes.html
+++ b/konga/assets/js/app/routes/views/routes.html
@@ -68,7 +68,7 @@
               OAuth
             </a>
             <a ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-sm btn-primary" style="margin-top: 3px;">
-              &nbsp;&nbsp;UMA&nbsp;&nbsp;
+              &nbsp;&nbsp;PEP&nbsp;&nbsp;
             </a>
           </td>
           <td>
