--- a/konga/assets/js/app/services/views/services.html
+++ b/konga/assets/js/app/services/views/services.html
@@ -59,7 +59,7 @@
               OAuth
             </a>
             <a ui-sref="services.uma-plugin({service_id: service.id })" class="btn btn-sm btn-primary">
-              UMA
+              PEP
             </a>
           </td>
           <td>
