--- a/konga/assets/js/app/routes/views/route-details.html
+++ b/konga/assets/js/app/routes/views/route-details.html
@@ -27,6 +27,7 @@
       </chips>
       <!--<input ng-model="route.hosts" class="form-control">-->
       <div class="text-danger" ng-if="errors.hosts" data-ng-bind="errors.hosts"></div>
+      <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
       <p class="help-block">
         A list of domain names that match this Route. For example: example.com. At least one of hosts, paths, or
         methods
@@ -48,6 +49,7 @@
         </chip-tmpl>
         <input chip-control/>
       </chips>
+      <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
       <p class="help-block">
         A list of paths that match this Route. For example: /my-path. At least one of <code>hosts</code>,
         <code>paths</code>, or <code>methods</code> must be set.
@@ -68,6 +70,7 @@
         </chip-tmpl>
         <input chip-control/>
       </chips>
+      <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
       <p class="help-block">
         A list of HTTP methods that match this Route. At least one of <code>hosts</code>, <code>paths</code>, or
         <code>methods</code>
@@ -125,6 +128,7 @@
         </chip-tmpl>
         <input chip-control/>
       </chips>
+      <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
       <p class="help-block">
         A list of the protocols this Route should allow. By default it is <code>["http", "https"]</code>,
         which means that the Route accepts both. When set to <code>["https"]</code>,
