#251: Added code design for filed description

--- a/konga/assets/js/app/routes/views/route-modal.html
+++ b/konga/assets/js/app/routes/views/route-modal.html
@@ -33,9 +33,7 @@
         <div class="text-danger" ng-if="errors.hosts" data-ng-bind="errors.hosts"></div>
         <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
         <p class="help-block">
-          A list of domain names that match this Route. For example: example.com. At least one of hosts, paths, or
-          methods
-          must be set.
+          A list of domain names that match this Route. For example: example.com. At least one of <code>hosts</code>, <code>paths</code>, or <code>methods</code> must be set.
         </p>
       </div>
     </div>
