--- a/konga/assets/js/app/routes/views/add-route-plugin-modal.html
+++ b/konga/assets/js/app/routes/views/add-route-plugin-modal.html
@@ -42,12 +42,26 @@
               <div class="panel-title">
                 <span class="capitalize">{{key.split('-').join(" ")}}</span>
                 <div class="pull-right">
-                  <button data-ng-if="existingPlugins.indexOf(key) < 0"
+                  <!--Add Button in kong plugins case-->
+                  <button
+                    data-ng-if="key != 'gluu-oauth-pep' && key != 'gluu-uma-pep' && existingPlugins.indexOf(key) < 0"
+                    class="btn btn-link btn-icon btn-primary"
+                    angular-ripple data-ng-click="onAddPlugin(key)">
+                    <i class="mdi mdi-plus plugin_i"></i>
+                  </button>
+
+                  <!--Add Button in Gluu plugins case-->
+                  <button data-ng-if="(key == 'gluu-oauth-pep' || key == 'gluu-uma-pep') && value.isAllow == true"
                           class="btn btn-link btn-icon btn-primary"
                           angular-ripple data-ng-click="onAddPlugin(key)">
-                    <i ng-hide="value.isAdded" class="mdi mdi-plus plugin_i"></i>
+                    <i class="mdi mdi-plus plugin_i"></i>
                   </button>
+
                   <i class="mdi mdi-check-all" data-ng-if="existingPlugins.indexOf(key) > -1"></i>
+                  <i class="mdi mdi-block-helper text-danger clickable" uib-tooltip="Not allowed, Already config gluu-uma-pep authentication."
+                     data-ng-if="key == 'gluu-oauth-pep' && value.isAllow == false"></i>
+                  <i class="mdi mdi-block-helper text-danger clickable" uib-tooltip="Not allowed, Already config gluu-oauth-pep authentication."
+                     data-ng-if="key == 'gluu-uma-pep' && value.isAllow == false"></i>
                 </div>
               </div>
             </div>
