--- a/konga/assets/js/app/routes/views/route-consumers.html
+++ b/konga/assets/js/app/routes/views/route-consumers.html
@@ -4,7 +4,7 @@
       <i class="mdi mdi-plug"></i>
       Eligible Consumers
     </h4>
-    <small>List of consumers with access, based on ACLs & Auth plugins</small>
+    <small>List of consumers with access, based on ACLs plugin</small>
   </div>
   <div class="col-md-6 text-right">
     <list-search
