#235: Handled file import and solved json render problem

--- a/konga/assets/js/app/snapshots/views/snapshots-list.html
+++ b/konga/assets/js/app/snapshots/views/snapshots-list.html
@@ -5,7 +5,7 @@
         <i class="mdi mdi-camera"></i>
         instant snapshot
       </button>
-      <input type="file" ng-model="file.data"
+      <input type="file" ng-model="file.data" accept=".json"
              id="import-snapshot"
              class="hidden"
              file-select="data"
