#296: UI: Configured Gluu OAuth Auth and PEP

--- a/konga/assets/js/app/routes/views/routes.html
+++ b/konga/assets/js/app/routes/views/routes.html
@@ -66,10 +66,10 @@
           <td>
             <div data-ng-repeat="plugin in route.plugins">
               <a data-ng-if="plugin.name == 'gluu-oauth-pep'" ui-sref="routes.oauth-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
-                <i class="mdi mdi-pencil"></i> OAUTH-PEP
+                <i class="mdi mdi-pencil"></i> OAUTH
               </a>
               <a data-ng-if="plugin.name == 'gluu-uma-pep'" ui-sref="routes.uma-plugin({route_id: route.id })" class="btn btn-sm btn-primary">
-                <i class="mdi mdi-pencil"></i> UMA-PEP
+                <i class="mdi mdi-pencil"></i> UMA
               </a>
             </div>
             <span data-ng-if="route.plugins.length < 1">-</span>
