--- a/konga/assets/js/app/services/views/services.html
+++ b/konga/assets/js/app/services/views/services.html
@@ -56,10 +56,10 @@
           <td>{{service.created_at*1000 | date : format : timezone}}</td>
           <td>
             <div data-ng-repeat="plugin in service.plugins">
-              <a data-ng-if="plugin.name == 'gluu-oauth-pep'" ui-sref="services.oauth-plugin({service_id: service.id })" class="btn btn-sm btn-primary">
+              <a data-ng-if="plugin.name == 'gluu-oauth-auth'" ui-sref="services.oauth-plugin({service_id: service.id })" class="btn btn-sm btn-primary">
                 <i class="mdi mdi-pencil"></i> OAUTH
               </a>
-              <a data-ng-if="plugin.name == 'gluu-uma-pep'" ui-sref="services.uma-plugin({service_id: service.id })" class="btn btn-sm btn-primary">
+              <a data-ng-if="plugin.name == 'gluu-uma-auth'" ui-sref="services.uma-plugin({service_id: service.id })" class="btn btn-sm btn-primary">
                 <i class="mdi mdi-pencil"></i> UMA
               </a>
             </div>
